--- a/Css/style.css
+++ b/Css/style.css
@@ -226,6 +226,7 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
   height: 100%;
 }
 @media (max-width: 992.98px) {
@@ -237,6 +238,11 @@ header {
   .main-body {
     padding: 0px 10px;
   }
+}
+
+.main-body-top {
+  height: 100%;
+  border: 1px solid black;
 }
 
 .main__title {
@@ -286,7 +292,7 @@ header {
 }
 
 .main__button {
-  margin-bottom: 50px;
+  margin-bottom: 60px;
 }
 .main__button span {
   background: url("../Img/Main/Icon_01.png") no-repeat left;
