--- a/#Source/Scss/header.scss
+++ b/#Source/Scss/header.scss
@@ -10,7 +10,7 @@ header{
 	margin-bottom: 130px;
 	@media (max-width: $md1 + px){
 		padding: 0px 20px;
-		@include adaptiv-value('margin-bottom', 130, 70, 0);
+		//@include adaptiv-value('margin-bottom', 130, 70, 0);
 	};
 }
 .menu {
