--- a/#Source/Scss/style.scss
+++ b/#Source/Scss/style.scss
@@ -90,6 +90,10 @@ $md4:479.98;
 	margin-bottom: 70px;
 	@include flexbox();
 	flex-direction: column;
+
+	@media (max-width: $md4 + px){
+		margin-bottom: 50px;
+	};
 }
 .main {
 	position: relative;
@@ -121,7 +125,7 @@ $md4:479.98;
 	};
 	font-weight: 400;
 	color: #26272d;
-	margin-bottom: 44px;
+	@include adaptiv-value('margin-bottom', 45, 30, 0);
 }
 .main__text {
 	max-width: 785px;
@@ -135,7 +139,7 @@ $md4:479.98;
 	};
 	font-weight: 400;
 	color: #8c8f94;
-	margin-bottom: 35px;
+	@include adaptiv-value('margin-bottom', 35, 20, 0);
 }
 .main__button {
 	span{
@@ -167,6 +171,7 @@ $md4:479.98;
 	position: relative;
 	padding-bottom: 126px;
 	margin-bottom: 130px;
+
 	&:after{
 		content: '';
 		position: absolute;
@@ -174,25 +179,54 @@ $md4:479.98;
 		bottom: 0;
 		margin-left: -585px;
 		width: 1170px;
+		@include adaptiv-value('width', 1170, 250, 0);
+		@include adaptiv-value('margin-left', -585, -125, 0);
 		height: 1px;
 		background-color: #f5f5f5;
 	}
+
+	@media (max-width: $md1 + px){
+		margin-left: 30px;
+		margin-right: 30px;
+		@include adaptiv-value('padding-bottom', 130, 60, 0);
+		@include adaptiv-value('margin-bottom', 130, 60, 0);
+	};
+	@media (max-width: $md3 + px){
+		margin-left: 15px;
+		margin-right: 15px;
+	};
+	@media (max-width: $md4 + px){
+		flex-wrap: wrap;
+		padding-bottom: 60px;
+	};
 }
-.features__item {
+.features-item {
 	flex: 0 0 45%;
+
+	@media (max-width: $md4 + px){
+		flex: 0 0 100%;
+		margin-bottom: 50px;
+		&:last-child{
+			margin-bottom: 0px;
+		}
+	};
+}
+.features-item-body {
+ 	height: 100%;
+	@include flexbox();
+	flex-direction: column;
 }
 .item__image {
-	margin-bottom: 45px;
+	@include adaptiv-value('margin-bottom', 45, 25, 0);
 }
 .item__title {
-	
 	font-size: 26px;
 	font-weight: 300;
 	color: #26272d;
 
-	margin-bottom: 45px;
+	@include adaptiv-value('margin-bottom', 45, 25, 0);
 }
-.item__text {
+.item-body__text {
 	font-size: 18px;
 	line-height: 26px;
 	font-weight: 400;
@@ -200,10 +234,13 @@ $md4:479.98;
 	max-width: 500px;
 
 	p:first-child {
-		margin-bottom: 30px;
+		@include adaptiv-value('margin-bottom', 30, 20, 0);
 	}
 }
 
+.amh1{
+
+}
 // ==================================
 
 // Подключаем footer
