--- a/Css/style.css
+++ b/Css/style.css
@@ -138,6 +138,16 @@ header {
     padding: 0px 20px;
   }
 }
+@media (max-height: 900px) {
+  .header-body {
+    margin-bottom: 80px;
+  }
+}
+@media (max-height: 800px) {
+  .header-body {
+    margin-bottom: 50px;
+  }
+}
 
 .menu {
   display: -webkit-box;
@@ -206,6 +216,11 @@ header {
       -ms-flex-direction: column;
           flex-direction: column;
 }
+@media (max-width: 479.98px) {
+  .FirstScreen {
+    margin-bottom: 50px;
+  }
+}
 
 .main {
   position: relative;
@@ -249,7 +264,7 @@ header {
   font-size: 62px;
   font-weight: 400;
   color: #26272d;
-  margin-bottom: 44px;
+  margin-bottom: calc(30px + 15 * ((100vw - 320px) / 1280));
 }
 @media (max-width: 1200px) {
   .main__title {
@@ -270,7 +285,7 @@ header {
   line-height: 28px;
   font-weight: 400;
   color: #8c8f94;
-  margin-bottom: 35px;
+  margin-bottom: calc(20px + 15 * ((100vw - 320px) / 1280));
 }
 @media (max-width: 1200px) {
   .main__text {
@@ -340,36 +355,82 @@ header {
   bottom: 0;
   margin-left: -585px;
   width: 1170px;
+  width: calc(250px + 920 * ((100vw - 320px) / 1280));
+  margin-left: calc(-125px + -460 * ((100vw - 320px) / 1280));
   height: 1px;
   background-color: #f5f5f5;
 }
+@media (max-width: 1200px) {
+  .features-columns {
+    margin-left: 30px;
+    margin-right: 30px;
+    padding-bottom: calc(60px + 70 * ((100vw - 320px) / 1280));
+    margin-bottom: calc(60px + 70 * ((100vw - 320px) / 1280));
+  }
+}
+@media (max-width: 767.98px) {
+  .features-columns {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
+@media (max-width: 479.98px) {
+  .features-columns {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-bottom: 60px;
+  }
+}
 
-.features__item {
+.features-item {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 45%;
           flex: 0 0 45%;
 }
+@media (max-width: 479.98px) {
+  .features-item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    margin-bottom: 50px;
+  }
+  .features-item:last-child {
+    margin-bottom: 0px;
+  }
+}
+
+.features-item-body {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
 
 .item__image {
-  margin-bottom: 45px;
+  margin-bottom: calc(25px + 20 * ((100vw - 320px) / 1280));
 }
 
 .item__title {
   font-size: 26px;
   font-weight: 300;
   color: #26272d;
-  margin-bottom: 45px;
+  margin-bottom: calc(25px + 20 * ((100vw - 320px) / 1280));
 }
 
-.item__text {
+.item-body__text {
   font-size: 18px;
   line-height: 26px;
   font-weight: 400;
   color: #8c8f94;
   max-width: 500px;
 }
-.item__text p:first-child {
-  margin-bottom: 30px;
+.item-body__text p:first-child {
+  margin-bottom: calc(20px + 10 * ((100vw - 320px) / 1280));
 }
 
 .btn {
