--- a/#Source/Scss/style.scss
+++ b/#Source/Scss/style.scss
@@ -250,31 +250,48 @@ $md4:479.98;
 
 .protect-body {
 	@include flexbox();
-	margin-bottom: 230px;
+	@include adaptiv-value('margin-bottom', 230, 150, $md3);
+	@media (max-width: $md3 + px){
+		flex-wrap: wrap;
+		margin-bottom: 70px;
+	};
 }
 .protect-body-column {
 	flex: 0 0 50%;
 	@media (max-width: $md2 + px){
 		flex: 0 0 55%;
 	};
+	@media (max-width: $md3 + px){
+		flex: 0 0 100%;
+	};
 }
 .protect-body-column__image {
 	height: 100%;
 	background-size: contain;
 	background-position: left center;
+	@media (max-width: $md3 + px){
+		background-position: left center;
+		padding-bottom: 95%;
+	};
+	@media (max-width: $md3 + px){
+		@include adaptiv-value('margin-bottom', 150, 100, 320);
+	};
 }
 .protect-body-column-info {
 	margin-left: 50px;
 	margin-right: 30px;
-
 	@media (max-width: $md2 + px){
 		margin-left: 30px;
+	};
+	@media (max-width: $md3 + px){
+		flex: 1 1 auto;
 	};
 
 }
 .protect-body-column__title {
 	font-family: 'Varela Round';
-	font-size: 42px;
+	@include adaptiv-value('font-size', 42, 37, $md3);
+	@include adaptiv-value('line-height', 52, 40, $md3);
 	font-weight: 400;
 	color: #26272d;
 
@@ -291,11 +308,21 @@ $md4:479.98;
 		margin-bottom: 35px;
 	};
 
+	@media (max-width: $md3 + px){
+		margin-top: 0;
+		font-size: 37px;
+		line-height: 35px;
+		max-width: 100%;
+		p{
+			display: inline;
+		}
+	};
+
 }
 .protect-body-column__text {
 	font-family: 'Lato';
-	font-size: 20px;
-	line-height: 28px;
+	@include adaptiv-value('font-size', 20, 18, $md3);
+	@include adaptiv-value('line-height', 28, 25, $md3);
 	font-weight: 400;
 	color: #8c8f94;
 
@@ -308,6 +335,12 @@ $md4:479.98;
 
 	@media (max-width: $md2 + px){
 		margin-bottom: 35px;
+	};
+
+	@media (max-width: $md3 + px){
+		font-size: 18px;
+		line-height: 25px;
+		max-width: 100%;
 	};
 
 	p{
@@ -324,7 +357,6 @@ $md4:479.98;
 	@include flexbox();
 	align-items: flex-start;
 	flex-wrap: wrap;
-	margin-bottom: 190px;
 }
 .button__try {
 	span{
@@ -335,9 +367,6 @@ $md4:479.98;
 	margin-right: 25px;
 	margin-bottom: 20px;
 }
-.button__more {}
-.btn--blue {}
-.btn--grey {}
 
 // ==================================
 
@@ -372,6 +401,7 @@ $md4:479.98;
 	@include adaptiv-value('margin-bottom', 60, 30, $md3);
 
 	@media (max-width: $md3 + px){
+		font-size: 37px;
 		margin-bottom: 30px;
 		line-height: 35px;
 		max-width: 100%;
@@ -393,7 +423,7 @@ $md4:479.98;
 		@media (max-width: $md3 + px){
 			@include adaptiv-value('margin-bottom', 30, 20, 320);
 			@include adaptiv-value('line-height', 25, 22, 320);
-			@include adaptiv-value('font-size', 18, 16, 320);
+			font-size: 18px;
 		};
 	}
 	p:last-child{
