--- a/#Source/Scss/style.scss
+++ b/#Source/Scss/style.scss
@@ -198,7 +198,7 @@ $md4:479.98;
 		margin-left: 30px;
 		margin-right: 30px;
 		@include adaptiv-value('padding-bottom', 130, 60, 320);
-		@include adaptiv-value('margin-bottom', 130, 60, 320);
+		@include adaptiv-value('margin-bottom', 130, 0, 320);
 	};
 	@media (max-width: $md3 + px){
 		margin-left: 15px;
@@ -253,7 +253,7 @@ $md4:479.98;
 	@include adaptiv-value('margin-bottom', 230, 150, $md3);
 	@media (max-width: $md3 + px){
 		flex-wrap: wrap;
-		margin-bottom: 70px;
+		margin-bottom: 100px;
 	};
 }
 .protect-body-column {
@@ -285,6 +285,7 @@ $md4:479.98;
 	};
 	@media (max-width: $md3 + px){
 		flex: 1 1 auto;
+		margin: 0px 20px;
 	};
 
 }
@@ -444,7 +445,7 @@ $md4:479.98;
 		letter-spacing: 0.1em;
 		color: #26272d;
 		@media (max-width: $md3 + px){
-			margin-bottom: 20px;
+			margin-bottom: 30px;
 		};
 	}	
 }
@@ -453,13 +454,13 @@ $md4:479.98;
 	flex-wrap: wrap;
 	img{
 		margin-right: 30px;
-		margin-bottom: 10px;
+		margin-bottom: 15px;
 	}
 	img:last-child{
 		margin-left: 0;
 	}
 	@media (max-width: $md3+ px){
-		margin-bottom: 40px;
+		margin-bottom: 35px;
 	};
 }
 .location-body__image {
