--- a/Css/style.css
+++ b/Css/style.css
@@ -400,7 +400,7 @@ header {
 }
 @media (max-width: 1200px) and (max-width: 1170px) {
   .features-columns {
-    margin-bottom: calc(60px + 70 * ((100vw - 320px) / 850));
+    margin-bottom: calc(0px + 130 * ((100vw - 320px) / 850));
   }
 }
 @media (max-width: 767.98px) {
@@ -499,7 +499,7 @@ header {
   .protect-body {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin-bottom: 70px;
+    margin-bottom: 100px;
   }
 }
 
@@ -559,6 +559,7 @@ header {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 auto;
             flex: 1 1 auto;
+    margin: 0px 20px;
   }
 }
 
@@ -845,7 +846,7 @@ header {
 }
 @media (max-width: 767.98px) {
   .location-body-info-text span {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
 }
 
@@ -859,14 +860,14 @@ header {
 }
 .location-body-info__partners img {
   margin-right: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 .location-body-info__partners img:last-child {
   margin-left: 0;
 }
 @media (max-width: 767.98px) {
   .location-body-info__partners {
-    margin-bottom: 40px;
+    margin-bottom: 35px;
   }
 }
 
