--- a/#Source/Scss/style.scss
+++ b/#Source/Scss/style.scss
@@ -203,6 +203,7 @@ $md4:479.98;
 	@media (max-width: $md3 + px){
 		margin-left: 15px;
 		margin-right: 15px;
+		@include adaptiv-value('margin-bottom', 30, 40, 320);
 	};
 	@media (max-width: $md4 + px){
 		flex-wrap: wrap;
@@ -254,32 +255,43 @@ $md4:479.98;
 	@media (max-width: $md3 + px){
 		flex-wrap: wrap;
 		margin-bottom: 100px;
+	};	
+	@media (max-width: $md1 + px){
+		padding: 10px;
+	};
+	@media (max-width: $md3 + px){
+		padding: 0px 0px;
 	};
 }
 .protect-body-column {
-	flex: 0 0 50%;
-	@media (max-width: $md2 + px){
-		flex: 0 0 55%;
-	};
+	@include flexbox();
+	flex: 0 0 53%;
 	@media (max-width: $md3 + px){
 		flex: 0 0 100%;
 	};
 }
 .protect-body-column__image {
-	height: 100%;
-	background-size: contain;
-	background-position: left center;
-	@media (max-width: $md3 + px){
-		background-position: left center;
-		padding-bottom: 95%;
+	margin: auto;
+	margin-left: -50%;
+	img{
+		width: 100%;
+		display: block;
+	}
+	@media (max-width: 1400px){
+		margin-left: -30%;
+	};
+	@media (max-width: $md1 + px){
+		margin-left: -27%;
 	};
 	@media (max-width: $md3 + px){
-		@include adaptiv-value('margin-bottom', 150, 100, 320);
+		margin-left: 0;
+		@include adaptiv-value('margin-bottom', 70, 40, 320);
 	};
 }
 .protect-body-column-info {
+	margin: auto;
+	flex: 0 0 41%;
 	margin-left: 50px;
-	margin-right: 30px;
 	@media (max-width: $md2 + px){
 		margin-left: 30px;
 	};
@@ -287,7 +299,6 @@ $md4:479.98;
 		flex: 1 1 auto;
 		margin: 0px 20px;
 	};
-
 }
 .protect-body-column__title {
 	font-family: 'Varela Round';
@@ -298,7 +309,6 @@ $md4:479.98;
 
 	max-width: 240px;
 
-	margin-top: 130px;
 	margin-bottom: 70px;
 
 	@media (max-width: $md1 + px){
@@ -375,7 +385,7 @@ $md4:479.98;
 	.container{
 		max-width: $mw+100+px;
 	}
-	margin-bottom: 250px;
+	margin-bottom: 190px;
 }
 .location-body {
 	@include flexbox();
@@ -469,6 +479,77 @@ $md4:479.98;
 		width: 150%;
 		@media (max-width: $md3 + px){
 			width: 100%;
+		};
+	}
+}
+
+// ==================================
+
+.interface {
+	padding-bottom: 120px;
+	background-color: #f5f5f8;
+
+	.container{
+		max-width: 1400px;
+	}
+}
+.interface-header {
+	text-align: center;
+}
+.interface-header__title {
+	position: relative;
+	padding-top: 140px;
+	font-family: 'Varela Round';
+	font-size: 42px;
+	font-weight: 400;
+	color: #26272d;
+	padding-bottom: 47px;
+	margin-bottom: 42px;
+
+	&:after{
+		content: '';
+		position: absolute;
+		left: 50%;
+		bottom: 0;
+		margin-left: -25px;
+		width: 50px;
+		height: 2px;
+		background-color: #267df4;
+	}
+}
+.interface-header__text {
+	font-family: Lato;
+	font-size: 12px;
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	color: #8c8f94;
+	margin-bottom: 45px;
+}
+
+.interface-header-slider {
+	@include flexbox();
+	justify-content: center;
+	li{	
+		padding-top: 54%;
+		flex: 0 0 23%;
+		background-size: contain;
+		background-position: center;
+		margin-right: 30px;
+
+		@media (max-width: $md3 + px){
+			padding-top: 69%;
+			flex: 0 0 31%;
+			margin-right: 15px;
+		};
+	}
+	li:last-child{
+		margin-right: 0px;
+	}
+	.main{
+		flex: 0 0 26%;
+		@media (max-width: $md3 + px){
+			flex: 0 0 34%;
 		};
 	}
 }
