--- a/Css/style.css
+++ b/Css/style.css
@@ -407,6 +407,12 @@ header {
   .features-columns {
     margin-left: 15px;
     margin-right: 15px;
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 767.98px) and (max-width: 1170px) {
+  .features-columns {
+    margin-bottom: calc(40px + -10 * ((100vw - 320px) / 850));
   }
 }
 @media (max-width: 479.98px) {
@@ -502,18 +508,25 @@ header {
     margin-bottom: 100px;
   }
 }
+@media (max-width: 1200px) {
+  .protect-body {
+    padding: 10px;
+  }
+}
+@media (max-width: 767.98px) {
+  .protect-body {
+    padding: 0px 0px;
+  }
+}
 
 .protect-body-column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 50%;
-          flex: 0 0 50%;
-}
-@media (max-width: 992.98px) {
-  .protect-body-column {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 55%;
-            flex: 0 0 55%;
-  }
+      -ms-flex: 0 0 53%;
+          flex: 0 0 53%;
 }
 @media (max-width: 767.98px) {
   .protect-body-column {
@@ -524,30 +537,41 @@ header {
 }
 
 .protect-body-column__image {
-  height: 100%;
-  background-size: contain;
-  background-position: left center;
+  margin: auto;
+  margin-left: -50%;
 }
-@media (max-width: 767.98px) {
+.protect-body-column__image img {
+  width: 100%;
+  display: block;
+}
+@media (max-width: 1400px) {
   .protect-body-column__image {
-    background-position: left center;
-    padding-bottom: 95%;
+    margin-left: -30%;
+  }
+}
+@media (max-width: 1200px) {
+  .protect-body-column__image {
+    margin-left: -27%;
   }
 }
 @media (max-width: 767.98px) {
   .protect-body-column__image {
-    margin-bottom: 150px;
+    margin-left: 0;
+    margin-bottom: 70px;
   }
 }
 @media (max-width: 767.98px) and (max-width: 1170px) {
   .protect-body-column__image {
-    margin-bottom: calc(100px + 50 * ((100vw - 320px) / 850));
+    margin-bottom: calc(40px + 30 * ((100vw - 320px) / 850));
   }
 }
 
 .protect-body-column-info {
+  margin: auto;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 41%;
+          flex: 0 0 41%;
   margin-left: 50px;
-  margin-right: 30px;
 }
 @media (max-width: 992.98px) {
   .protect-body-column-info {
@@ -570,7 +594,6 @@ header {
   font-weight: 400;
   color: #26272d;
   max-width: 240px;
-  margin-top: 130px;
   margin-bottom: 70px;
 }
 @media (max-width: 1170px) {
@@ -676,7 +699,7 @@ header {
 }
 
 .location {
-  margin-bottom: 250px;
+  margin-bottom: 190px;
 }
 .location .container {
   max-width: 1270px;
@@ -878,6 +901,92 @@ header {
 @media (max-width: 767.98px) {
   .location-body__image img {
     width: 100%;
+  }
+}
+
+.interface {
+  padding-bottom: 120px;
+  background-color: #f5f5f8;
+}
+.interface .container {
+  max-width: 1400px;
+}
+
+.interface-header {
+  text-align: center;
+}
+
+.interface-header__title {
+  position: relative;
+  padding-top: 140px;
+  font-family: "Varela Round";
+  font-size: 42px;
+  font-weight: 400;
+  color: #26272d;
+  padding-bottom: 47px;
+  margin-bottom: 42px;
+}
+.interface-header__title:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  margin-left: -25px;
+  width: 50px;
+  height: 2px;
+  background-color: #267df4;
+}
+
+.interface-header__text {
+  font-family: Lato;
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  color: #8c8f94;
+  margin-bottom: 45px;
+}
+
+.interface-header-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.interface-header-slider li {
+  padding-top: 54%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 23%;
+          flex: 0 0 23%;
+  background-size: contain;
+  background-position: center;
+  margin-right: 30px;
+}
+@media (max-width: 767.98px) {
+  .interface-header-slider li {
+    padding-top: 69%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 31%;
+            flex: 0 0 31%;
+    margin-right: 15px;
+  }
+}
+.interface-header-slider li:last-child {
+  margin-right: 0px;
+}
+.interface-header-slider .main {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 26%;
+          flex: 0 0 26%;
+}
+@media (max-width: 767.98px) {
+  .interface-header-slider .main {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 34%;
+            flex: 0 0 34%;
   }
 }
 
