--- a/#Source/Scss/style.scss
+++ b/#Source/Scss/style.scss
@@ -486,11 +486,16 @@ $md4:479.98;
 // ==================================
 
 .interface {
-	padding-bottom: 120px;
+	@include adaptiv-value('padding-top', 140, 70, $md3);
+	@include adaptiv-value('padding-bottom', 120, 70, $md3);
+	@media (max-width: $md3 + px){
+		@include adaptiv-value('padding-top', 70, 50, $md4);
+		@include adaptiv-value('padding-bottom', 70, 50, $md4);
+	};
 	background-color: #f5f5f8;
 
 	.container{
-		max-width: 1400px;
+		max-width: 1450px;
 	}
 }
 .interface-header {
@@ -498,7 +503,6 @@ $md4:479.98;
 }
 .interface-header__title {
 	position: relative;
-	padding-top: 140px;
 	font-family: 'Varela Round';
 	font-size: 42px;
 	font-weight: 400;
@@ -530,26 +534,35 @@ $md4:479.98;
 .interface-header-slider {
 	@include flexbox();
 	justify-content: center;
-	li{	
-		padding-top: 54%;
-		flex: 0 0 23%;
-		background-size: contain;
-		background-position: center;
-		margin-right: 30px;
+}
 
-		@media (max-width: $md3 + px){
-			padding-top: 69%;
-			flex: 0 0 31%;
-			margin-right: 15px;
-		};
-	}
-	li:last-child{
+.interface-header-slider__image {
+	padding-top: 51%;
+	flex: 0 0 22%;
+	background-size: contain;
+	background-position: center;
+	@include adaptiv-value('margin-right', 30, 15, $md3);
+
+	@media (max-width: $md3 + px){
+		padding-top: 91%;
+		flex: 0 0 40%;
+		@include adaptiv-value('margin-right', 30, 20, $md4);
+	};
+
+	@media (max-width: $md4 + px){
+		padding-top: 160%;
+	};
+
+	&:last-child{
 		margin-right: 0px;
 	}
-	.main{
-		flex: 0 0 26%;
+	&.main{
+		flex: 0 0 25%;
 		@media (max-width: $md3 + px){
-			flex: 0 0 34%;
+			flex: 0 0 47%;
+		};
+		@media (max-width: $md4 + px){
+			flex: 0 0 95%;
 		};
 	}
 }
