--- a/#Source/Scss/forms.scss
+++ b/#Source/Scss/forms.scss
@@ -9,7 +9,6 @@
 		// padding: 0px 22px;
 
 		padding: 13px 22px;
-
 		border-radius: 30px;
 		color: #fff;
 		background-color: #267df4;
@@ -27,6 +26,41 @@
 		color: #26272d;
 		border: 1px #dadcdf solid;
 		border-radius: 30px;
+	}
+
+	&--green{
+		font-size: 16px;
+		// height: 42px;
+		// line-height: 42px;
+		// padding: 0px 22px;
+		white-space: nowrap;
+		padding: 13px 22px;
+		border-radius: 30px;
+		color: #fff;
+		background-color: #6fc754;
+
+		@media (max-width: $md4 + px){
+			@include adaptiv-value('padding-left', 22, 15, 320);
+			@include adaptiv-value('padding-right', 22, 15, 320);
+			span{
+				@include adaptiv-value('padding-right', 30, 15, 0);
+			}
+		};
+	}
+
+	&--black{
+		text-align: center;
+		padding: 13px 22px;
+		border-radius: 30px;
+		font-size: 12px;
+		font-weight: 400;
+		color: #ffffff;
+		background-color: #131315;
+
+		p{
+			font-size: 23px;
+			line-height: 22px;
+		}
 	}
 
 	&--get {
