--- a/#Source/Scss/style.scss
+++ b/#Source/Scss/style.scss
@@ -569,6 +569,95 @@ $md4:479.98;
 
 // ==================================
 
+.download {
+	background-color: #f5f5f8;
+	padding-top: 75px;
+	padding-bottom: 130px;
+	@media (max-width: $md3 + px){
+		padding-left: 0px 20px;
+		padding-right: 0px 20px;
+	};
+}
+.container {}
+.download-body{
+	text-align: center;
+}
+.download-body__logo {
+	opacity: 0.5;
+	font-size: 12px;
+	font-weight: 400;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	color: #3a3d4b;
+	span{
+		font-weight: 700;
+	}
+	margin-bottom: 45px;
+}
+.download-body__title {
+	font-family: 'Varela Round';
+	font-size: 42px;
+	font-weight: 400;
+	color: #3a3d4b;
+	margin-bottom: 48px;
+}
+.download-body-form {
+	padding: 3px;
+	margin: 0px auto;
+	@include flexbox();
+	justify-content: space-between;
+	border: 1px solid #cbcbce;
+	border-radius: 30px;
+	margin-bottom: 65px;
+	max-width: 500px;
+	@media (max-width: $md4 + px){
+
+	};
+}
+.download-body-form__input {
+	font-size: 16px;
+	font-weight: 400;
+	color: #3a3d4b;
+
+	min-width: 150px;
+	padding-left: 20px;
+	padding-right: 20px;
+	border-radius: 30px;
+	flex-grow: 1;
+	color: #3f414f;
+	background-color: #f5f5f8;
+}
+.download-body-form__button {
+	span{
+		padding-right: 30px;
+		background: url('../Img/Download/Icon_01.png') no-repeat right;
+		background-position: right 70%;
+	}
+}
+.download-body__text {
+	opacity: 0.3;
+	font-size: 12px;
+	font-weight: 400;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	color: #3a3d4b;
+	margin-bottom: 20px;
+}
+.download-body__button {
+		display: block;
+		span{
+			padding-left: 40px;
+		}
+		p{
+			padding-left: 40px;
+		}
+		background: url('../Img/Download/Icon_02.png') no-repeat left;
+		background-position: 15% center;
+	
+}
+
+// ==================================
+
 // Подключаем footer
 @import "footer.scss";
 
